# qt_CommTool

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc  方案_通讯模块重构.md
.trae/skills/CommTool_UI_ViewModel/: SKILL.md
CommModelLib/Bluetooth/: BluetoothService.cpp  BluetoothService.h
CommModelLib/Common/: BaseCommService.cpp  BaseCommService.h  EnumComm.h  Singleton.h
CommModelLib/SerialPort/: SerialService.cpp  SerialService.h
CommModelLib/docs/: SerialService_Interface.md
Help/: CommImpl.cpp  CommImpl.h  DataParser.cpp  DataParser.h  crc.cpp  crc.h
View/: AppSettingsDialog.qml  CommandMenuView.qml  DataPlotView.qml  DataShowView.qml  HelpView.qml  MainView.qml  SettingView.qml  SideBarView.qml
View/CommonToolView/: BluetoothSettingView.qml  SerialSettingView.qml
View/Component/: Button.qml  ChartStatusOverlay.qml  LineChartWidget.qml
View/Theme/: ColorTheme.qml  Toast.qml  qmldir
ViewModel/: AppSettingsViewModel.cpp  AppSettingsViewModel.h  CommViewModel.cpp  CommViewModel.h  CommandViewModel.cpp  CommandViewModel.h  DataPlotViewModel.cpp  DataPlotViewModel.h  MainViewModel.cpp  MainViewModel.h
ViewModel/Comm/: BluetoothCommHandler.cpp  BluetoothCommHandler.h  CommHandler.cpp  CommHandler.h  CommManager.cpp  CommManager.h  SerialCommHandler.cpp  SerialCommHandler.h
tests/CommModelLibTest/: BluetoothServiceTest.cpp  BluetoothServiceTest.h  SerialServiceTest.cpp  SerialServiceTest.h
例子/: ProtocolDebuggingToolDialog.xaml  ProtocolDebuggingToolDialog.xaml.cs
